Fix Bug #68536 Pack for 64bits integer is broken on bigendian.

Covered by ext/standard/tests/strings/pack64.phpt