ext/standard/pack.c
@@ -1120,26 +1120,26 @@ PHP_MINIT_FUNCTION(pack)
 		machine_endian_longlong_map[1] = size - 7;
 		machine_endian_longlong_map[2] = size - 6;
 		machine_endian_longlong_map[3] = size - 5;
-		machine_endian_longlong_map[0] = size - 4;
-		machine_endian_longlong_map[1] = size - 3;
-		machine_endian_longlong_map[2] = size - 2;
-		machine_endian_longlong_map[3] = size - 1;
+		machine_endian_longlong_map[4] = size - 4;
+		machine_endian_longlong_map[5] = size - 3;
+		machine_endian_longlong_map[6] = size - 2;
+		machine_endian_longlong_map[7] = size - 1;
 		big_endian_longlong_map[0] = size - 8;
 		big_endian_longlong_map[1] = size - 7;
 		big_endian_longlong_map[2] = size - 6;
 		big_endian_longlong_map[3] = size - 5;
-		big_endian_longlong_map[0] = size - 4;
-		big_endian_longlong_map[1] = size - 3;
-		big_endian_longlong_map[2] = size - 2;
-		big_endian_longlong_map[3] = size - 1;
+		big_endian_longlong_map[4] = size - 4;
+		big_endian_longlong_map[5] = size - 3;
+		big_endian_longlong_map[6] = size - 2;
+		big_endian_longlong_map[7] = size - 1;
 		little_endian_longlong_map[0] = size - 1;
 		little_endian_longlong_map[1] = size - 2;
 		little_endian_longlong_map[2] = size - 3;
 		little_endian_longlong_map[3] = size - 4;
-		little_endian_longlong_map[0] = size - 5;
-		little_endian_longlong_map[1] = size - 6;
-		little_endian_longlong_map[2] = size - 7;
-		little_endian_longlong_map[3] = size - 8;
+		little_endian_longlong_map[4] = size - 5;
+		little_endian_longlong_map[5] = size - 6;
+		little_endian_longlong_map[6] = size - 7;
+		little_endian_longlong_map[7] = size - 8;
 #endif
 	}
 
